--- a/index.html
+++ b/index.html
@@ -17,21 +17,27 @@
            <main>
            <h1><center>Weekend Book Summary</center></h1>
               <div id="isi">
-              <div class="isiposting">
+                  <p>
+                  <div class="isiposting">
                   <img src="posting1.jpg" class="gambardepan">
                   <h2>FAKTA FAKTA AKHIR</h2>
                   fakta fakta dalam pengemasan website, yang pertama adalah penerapan tampilan halaman depan , kemudian pemolesan grafik tampilan dan pernak perniknya. kemudian dari pada itu, kita harus mempertimbangkan akan banyaknya jumlah pengunjung.
-                  </div><br>
+                  </div>
+                  </p>
+                  <p>
                   <div class="isiposting">
                   <img src="posting2.jpg" class="gambardepan">
                   <h2>FAKTA FAKTA AKHIR</h2>
                   fakta fakta dalam pengemasan website, yang pertama adalah penerapan tampilan halaman depan , kemudian pemolesan grafik tampilan dan pernak perniknya. kemudian dari pada itu, kita harus mempertimbangkan akan banyaknya jumlah pengunjung.
-                  </div><br>
+                  </div>
+                  </p>
+                  <p>
                   <div class="isiposting">
                   <img src="posting3.jpg" class="gambardepan">
                   <h2>FAKTA FAKTA AKHIR</h2>
                   fakta fakta dalam pengemasan website, yang pertama adalah penerapan tampilan halaman depan , kemudian pemolesan grafik tampilan dan pernak perniknya. kemudian dari pada itu, kita harus mempertimbangkan akan banyaknya jumlah pengunjung.
                   </div>
+                  </p>
               </div>
            </main>
            <div class="sidebar">
